[gd_scene load_steps=2 format=3 uid="uid://basic_menu_scene"]

[ext_resource type="Script" path="res://scripts/main_menu_simple.gd" id="1_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MINERIGHTS"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Juego de Organizaci√≥n Comunitaria"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "‚Ä¢ Mu√©vete con WASD
‚Ä¢ Presiona E para interactuar con NPCs  
‚Ä¢ Ve a zonas azules para organizar grupos
‚Ä¢ Ejecuta acciones colectivas para conquistar derechos"
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üöÄ COMENZAR A ORGANIZAR"

[node name="CreditsButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üìù Cr√©ditos"

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üö™ Salir"